testsuite/bsc.evaluator/uninit/UninitBit1Err1.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling UninitBit1Err1.bsv
Warning: "UninitBit1Err1.bsv", line 4, column 4: (P0042)
  Assignment to `x' missing from some paths
code generation for sysUninitBit1Err1 starts
Error: "UninitBit1Err1.bsv", line 3, column 12: (G0028)
  `x' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `r' at "UninitBit1Err1.bsv", line 6,
  column 9.
  During elaboration of `sysUninitBit1Err1' at "UninitBit1Err1.bsv", line 2,
  column 8.
